# dinov3_playground

./: AUTO_LOAD_LATEST_MODEL.md  CONTEXT_FUSION_ARCHITECTURE.md  CONTEXT_FUSION_MEMORY.md  CONTEXT_FUSION_QUICK_REF.md  DINOV3_FLOW_FIX.md  DINOV3_PROCESSING_EXPLANATION.md  ENHANCEMENTS.md  GT_EXTENSION_SUMMARY.py  INFERENCE.md  INFERENCE_CONTEXT_FUSION_GUIDE.md  LEARNED_UPSAMPLING.md  LICENSE  LOSS_FUNCTION_GUIDE.md  MANIFEST.in  MEMORY_CLEANUP_IMPROVEMENTS.md  MEMORY_OPTIMIZATIONS.md  MULTICLASS_SUPPORT.md  README.md  SELECTIVE_DOWNSAMPLING.md  TRAINING_ENHANCEMENTS.md  anyup_utils.py  context_fusion_summary.py  context_training_updates_summary.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dinov3_playground/: QUICKSTART.md  RANDOM_CROP_PREPROCESSING.md  README_preprocessing.md  __init__.py  affinity_utils.py  augmentations.py  check_preprocessing.py  context_integration_example.py  data_processing.py  dinov3_core.py  dinov3_finetune.py  dinov3_finetune_3Dunet_mito_sat.py  dinov3_finetune_original.py  dinov3_finetune_unet_mito.py  dinov3_finetune_unet_nuc.py  dinov3_preprocessing.py  dinov3_preprocessing_random_crops.py  example_training_integration.py  inference.py  losses.py  lsd_utils.py  memory_efficient_training.py  model_training.py  models.py  multi_scale_context.py  preprocess_dataset_random_crops.py  preprocess_volume.py  preprocessed_dataloader.py  run_inference.py  submit_preprocessing_jobs.py  submit_random_crop_jobs.py  tensorboard_helpers.py  tensorstore_loader.py  threaded_prefetcher.py  train_faiss.py  train_faiss_multi_image.py  update_boundary_weights.py  vis.py  visualization.py  zarr_util.py
examples/: QUICK_START_CROP_FILTER_AND_MIN_IDS.py  compare_loss_functions.py  convnext_finetune_3Dunet_challenge_mito_affinities_1_to_9_random_batchrenorm.py  dinov3_finetune_3Dunet_cell_affinities.py  dinov3_finetune_3Dunet_cell_affinities_1_to_9.py  dinov3_finetune_3Dunet_cell_affinities_lsds_1_to_9.py  dinov3_finetune_3Dunet_challenge.py  dinov3_finetune_3Dunet_challenge_base_res_16.py  (+93 more)
